// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> should render Image component correctly 1`] = `
<View
  style={
    [
      {},
    ]
  }
>
  <View
    style={
      [
        {
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <Image
      accessibilityLabel="testing_image"
      onLoad={[Function]}
      onLoadStart={[Function]}
      resizeMode="cover"
      source={
        {
          "uri": "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
        }
      }
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "tintColor": undefined,
          },
        ]
      }
      testID="testing"
    />
  </View>
</View>
`;

exports[`<Image /> should render with custom container style 1`] = `
<View
  style={
    [
      {},
      {
        "padding": 10,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <Image
      accessibilityLabel="testing_image"
      onLoad={[Function]}
      onLoadStart={[Function]}
      resizeMode="cover"
      source={
        {
          "uri": "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
        }
      }
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "tintColor": undefined,
          },
        ]
      }
      testID="testing"
    />
  </View>
</View>
`;

exports[`<Image /> should render with custom image style 1`] = `
<View
  style={
    [
      {},
    ]
  }
>
  <View
    style={
      [
        {
          "overflow": "hidden",
        },
        {
          "borderRadius": 50,
          "height": 100,
          "width": 100,
        },
      ]
    }
  >
    <Image
      accessibilityLabel="testing_image"
      onLoad={[Function]}
      onLoadStart={[Function]}
      resizeMode="cover"
      source={
        {
          "uri": "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
        }
      }
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "tintColor": undefined,
          },
        ]
      }
      testID="testing"
    />
  </View>
</View>
`;

exports[`<Image /> should render with custom placeholder animation and container colors 1`] = `
<View
  style={
    [
      {},
    ]
  }
>
  <View
    style={
      [
        {
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <Image
      accessibilityLabel="testing_image"
      onLoad={[Function]}
      onLoadStart={[Function]}
      resizeMode="cover"
      source={
        {
          "uri": "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
        }
      }
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "tintColor": undefined,
          },
        ]
      }
      testID="testing"
    />
  </View>
</View>
`;

exports[`<Image /> should render with custom placeholder animation color 1`] = `
<View
  style={
    [
      {},
    ]
  }
>
  <View
    style={
      [
        {
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <Image
      accessibilityLabel="testing_image"
      onLoad={[Function]}
      onLoadStart={[Function]}
      resizeMode="cover"
      source={
        {
          "uri": "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
        }
      }
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "tintColor": undefined,
          },
        ]
      }
      testID="testing"
    />
  </View>
</View>
`;

exports[`<Image /> should render with no placeholder 1`] = `
<View
  style={
    [
      {},
    ]
  }
>
  <View
    style={
      [
        {
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <Image
      accessibilityLabel="testing_image"
      onLoad={[Function]}
      onLoadStart={[Function]}
      resizeMode="cover"
      source={
        {
          "uri": "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png",
        }
      }
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "tintColor": undefined,
          },
        ]
      }
      testID="testing"
    />
  </View>
</View>
`;

exports[`<Image /> should render with number source (local image) 1`] = `
<View
  style={
    [
      {},
    ]
  }
>
  <View
    style={
      [
        {
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <Image
      accessibilityLabel="testing_image"
      onLoad={[Function]}
      onLoadStart={[Function]}
      resizeMode="cover"
      source={
        {
          "testUri": "../../../src/assets/images/placeholder.png",
        }
      }
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "tintColor": undefined,
          },
        ]
      }
      testID="testing"
    />
  </View>
</View>
`;

exports[`<Image /> should render with string source 1`] = `
<View
  style={
    [
      {},
    ]
  }
>
  <View
    style={
      [
        {
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <Image
      accessibilityLabel="testing_image"
      onLoad={[Function]}
      onLoadStart={[Function]}
      resizeMode="cover"
      source={
        {
          "0": "h",
          "1": "t",
          "10": "w",
          "11": ".",
          "12": "g",
          "13": "o",
          "14": "o",
          "15": "g",
          "16": "l",
          "17": "e",
          "18": ".",
          "19": "c",
          "2": "t",
          "20": "o",
          "21": "m",
          "22": "/",
          "23": "i",
          "24": "m",
          "25": "a",
          "26": "g",
          "27": "e",
          "28": "s",
          "29": "/",
          "3": "p",
          "30": "b",
          "31": "r",
          "32": "a",
          "33": "n",
          "34": "d",
          "35": "i",
          "36": "n",
          "37": "g",
          "38": "/",
          "39": "g",
          "4": "s",
          "40": "o",
          "41": "o",
          "42": "g",
          "43": "l",
          "44": "e",
          "45": "l",
          "46": "o",
          "47": "g",
          "48": "o",
          "49": "/",
          "5": ":",
          "50": "2",
          "51": "x",
          "52": "/",
          "53": "g",
          "54": "o",
          "55": "o",
          "56": "g",
          "57": "l",
          "58": "e",
          "59": "l",
          "6": "/",
          "60": "o",
          "61": "g",
          "62": "o",
          "63": "_",
          "64": "c",
          "65": "o",
          "66": "l",
          "67": "o",
          "68": "r",
          "69": "_",
          "7": "/",
          "70": "2",
          "71": "7",
          "72": "2",
          "73": "x",
          "74": "9",
          "75": "2",
          "76": "d",
          "77": "p",
          "78": ".",
          "79": "p",
          "8": "w",
          "80": "n",
          "81": "g",
          "9": "w",
        }
      }
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "tintColor": undefined,
          },
        ]
      }
      testID="testing"
    />
  </View>
</View>
`;
